usability and readability fixes

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -79,7 +79,8 @@
     align-content: center;
     justify-content: space-between;
     position: fixed;
-    height: 50px;
+    height: 5.8%;
+    min-height: 50px;
     z-index: 1;
     border: white;
     border-bottom:  1px;
@@ -498,6 +499,188 @@
   left: 35%;
   position: absolute;
   border-radius: 7px;
+}
+@media screen and (min-width: 2500px){
+  .navlinks a {
+    font-size: 25px;
+  }
+  .user a{
+    font-size: 23px;
+  }
+  .topnav h1{
+    font-size: 50px;
+  }
+  #button{
+    padding: 10px 25px;
+    font-size: 20px;
+  }
+  .goaltypeselector h2{
+    font-size: 35px;
+  }
+  .goaltypeselector h3{
+    font-size: 30px;
+  }
+  .radiobtn {
+    font-size: 23px;
+    padding-bottom: 10px;
+  }
+  .radiocheckmark {
+    height: 25px;
+    width: 25px;
+  }
+  .radiobtn .radiocheckmark:after {
+    top:7px;
+    left: 7px;
+    width: 11px;
+    height: 11px;
+  }
+  .radiobtn input {
+    padding-right: 10px;
+    margin-right: 10px;
+  }
+  .radiobtn span{
+    padding-left: 5px;
+  }
+  .dailyheading{
+    font-size: 21px;
+  }
+  .dailyheading ul li{
+    font-size: 20px;
+    width: 90px;
+  }
+  .onedailygoalheading{
+    font-size: 20px;
+  }
+  .onedailygoalcheckmark li{
+    width: 89.7px;
+  }
+  .checkmark {
+    height: 40px;
+    width: 40px;
+  }
+  .checkbox .checkmark:after {
+    left: 14.5px;
+    top: 5.5px;
+    width: 11.5px;
+    height: 22.5px;
+  }
+  .otherheadingheading{
+    font-size: 20px;
+  }
+  .otherdailygoal{
+    font-size: 20px;
+  }
+  .rightleft{
+    height: 4px;
+    width: 40px;
+  }
+  .leftright{
+    height: 4px;
+    width: 40px;
+  }
+  .close-container{
+    width: 35px;
+  }
+  .main {
+    padding-top: calc(50px + 3%);
+  }
+}
+@media screen and (min-width: 3800px){
+  .navlinks a {
+    font-size: 37px;
+  }
+  .user img{
+    margin-bottom: 20px;
+  }
+  .user a{
+    font-size: 35px;
+  }
+  .topnav h1{
+    font-size: 70px;
+  }
+  #button{
+    padding: 15px 35px;
+    font-size: 25px;
+  }
+  .goaltypeselector h2{
+    font-size: 48px;
+  }
+  .goaltypeselector h3{
+    font-size: 40px;
+  }
+  .radiobtn {
+    font-size: 33px;
+    padding-bottom: 14px;
+  }
+  .radiocheckmark {
+    height: 37px;
+    width: 37px;
+  }
+  .radiobtn .radiocheckmark:after {
+    top:10px;
+    left: 10px;
+    width: 17px;
+    height: 17px;
+  }
+  .radiobtn input {
+    padding-right: 10px;
+    margin-right: 10px;
+  }
+  .radiobtn span{
+    padding-left: 20px;
+    margin-top: 2px;
+  }
+  .dailyheading{
+    font-size: 28px;
+  }
+  .dailyheading ul li{
+    font-size: 29px;
+    width: 120px;
+  }
+  .onedailygoalheading{
+    font-size: 30px;
+    padding-left: .8%;
+  }
+  .onedailygoalcheckmark li{
+    width: 120px;
+    /* background: red; */
+  }
+  .checkmark {
+    margin-top: 5px;
+    height: 56px;
+    width: 56px;
+  }
+  .checkbox .checkmark:after {
+    left: 20px;
+    top: 8px;
+    width: 15px;
+    height: 34px;
+    border-width: 0 6px 6px 0;
+  }
+  .otherheadingheading{
+    font-size: 25px;
+  }
+  .otherdailygoal{
+    font-size: 30px;
+  }
+  .rightleft{
+    margin-left: 10px;
+    height: 6px;
+    width: 55px;
+  }
+  .leftright{
+    margin-left: 10px;
+    height: 6px;
+    width: 55px;
+  }
+  .close-container{
+    margin: auto;
+    width: 70px;
+    margin-left: -5px;
+  }
+  .main {
+    padding-top: calc(50px + 3%);
+  }
 }
 
 @media screen and (max-width: 1400px){
